# python_web_hw9

./: bot_main.py  config.ini  pyproject.toml  seed.py
config/: db.py  models.py
python_web16_hw9/: scrapy.cfg
python_web16_hw9/python_web16_hw9/: items.py  middlewares.py  pipelines.py  settings.py
python_web16_hw9/python_web16_hw9/spiders/: authors.json  authors.py  main.py
